uxUi dev page done
added photos and links

--- a/css/style.css
+++ b/css/style.css
@@ -141,3 +141,9 @@ h3 {
 }
 
 /* Computer Science End----------------------------------- */
+
+/* UX UI ------------------------------------------------- */
+
+.Syzo img{
+    max-width: 7rem;
+}
